Corrected alignment on logo

--- a/src/Components/navigation/navigation.module.scss
+++ b/src/Components/navigation/navigation.module.scss
@@ -11,7 +11,7 @@
 
 .brand {
     img {
-        width: 8vw;
+        width: 6vw;
         height: auto;
     }
 }  
